--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class='container mt-5'>
   	<div class='row'>
     	<div class='mx-auto'>
-    		<p>©Nagano curry</p>
+    		<p>©idea_vote</p>
     	</div>
     </div>
   </div>
