--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,2 +1,17 @@
-<h1>Public::Posts#new</h1>
-<p>Find me in app/views/public/posts/new.html.erb</p>
+<h1>新規投稿</h1>
+<%= form_with model: @post, url: '/posts', method: :post do |f| %>
+  <h4>タイトル</h4>
+  <%= f.text_field :title %>
+
+  <h4>紹介文</h4>
+  <%= f.text_area :introduction %>
+
+  <h4>アピールポイント</h4>
+  <%= f.text_area :selling_point %>
+
+  <h4>詳細文</h4>
+  <%= f.text_area :detail %>
+
+  <%= f.submit '投稿' %>
+<% end %>
+
