[Update]投稿一覧のレイアウト調整

--- a/app/views/layouts/_public_header.html.erb
+++ b/app/views/layouts/_public_header.html.erb
@@ -25,8 +25,8 @@
             </li>
             <li class="p-2"></li>
             <li>
-              <%=  link_to posts_path ,class: 'nav-link text-dark btn btn-light' do %>
-                カート
+              <%=  link_to new_post_path ,class: 'nav-link text-dark btn btn-light' do %>
+                新規投稿
               <% end %>
             </li>
             <li class="p-2"></li>
