--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,17 +1,33 @@
+<p id="notice"><%= notice %></p>
+
 <h1>投稿一覧</h1>
 
-<% @all_posts.each do |post| %>
+<div class="container">
+  <div class="row">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>タイトル</th>
+          <th>紹介文</th>
+          <th>アピールポイント</th>
+          <th>詳細文</th>
+        </tr>
+      </thead>
 
-  <p>タイトル</p>
-  <span><%= post.title %></span>
-
-  <h4>紹介文</h4>
-  <span><%= post.introduction %></span>
-
-  <h4>アピールポイント</h4>
-  <span><%= post.selling_point %></span>
-
-  <h4>詳細文</h4>
-  <span><%= post.detail %></span>
-
-<% end %>
+      <tbody>
+        <% @all_posts.each do |post| %>
+          <tr>
+            <td>
+              <%= link_to post_path(post.id) do %>
+                <%= post.title %>
+              <% end %>
+            </td>
+            <td><%= post.introduction %></td>
+            <td><%= post.selling_point %></td>
+            <td><%= post.detail %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
