--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Public::Posts#show</h1>
-<p>Find me in app/views/public/posts/show.html.erb</p>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-2'></div>
+    <div class='col-md-7'>
+      <h2><strong>タイトル</strong></h2>
+      <h5><%= @post.title %></h5>
+
+      <h2><strong>紹介文</strong></h2>
+      <p><%= @post.introduction %></p>
+
+      <h2><strong>アピールポイント</strong></h2>
+      <p><%= @post.selling_point %></p>
+
+      <h2><strong>詳細</strong></h2>
+      <p><%=  @post.detail %></p>
+    </div>
+    <div class='col-md-3'></div>
+  </div>
+</div>
