[Update]投稿詳細画面に画像追加

--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -19,6 +19,11 @@
           <tr>
             <td>
               <%= link_to post_path(post.id) do %>
+                <% if post.image.attached? %>
+                  <%= image_tag post.image, size: "100x100" %>
+                <% else %>
+                  <%= image_tag 'default-image', size: "100x100" %>
+                <% end %>
                 <%= post.title %>
               <% end %>
             </td>
