--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,5 +1,9 @@
 <h1>新規投稿</h1>
 <%= form_with model: @post, url: '/posts', method: :post do |f| %>
+  
+  <h4>画像</h4>
+  <%= f.file_field :image, accept: "image/*" %>
+  
   <h4>タイトル</h4>
   <%= f.text_field :title %>
 
