--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -2,37 +2,4 @@
 
 <h1>投稿一覧</h1>
 
-<div class="container">
-  <div class="row">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>タイトル</th>
-          <th>紹介文</th>
-          <th>アピールポイント</th>
-          <th>詳細文</th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @all_posts.each do |post| %>
-          <tr>
-            <td>
-              <%= link_to post_path(post.id) do %>
-                <% if post.image.attached? %>
-                  <%= image_tag post.image, size: "100x100" %>
-                <% else %>
-                  <%= image_tag 'default-image', size: "100x100" %>
-                <% end %>
-                <%= post.title %>
-              <% end %>
-            </td>
-            <td><%= post.introduction %></td>
-            <td><%= post.selling_point %></td>
-            <td><%= post.detail %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-</div>
+<%= render 'index',posts: @all_posts %>
