[Update]ユーザ情報補編集機能追加

--- a/app/views/layouts/_public_header.html.erb
+++ b/app/views/layouts/_public_header.html.erb
@@ -13,7 +13,7 @@
           <div class="d-flex flex-column">
             <div class="d-flex flex-row justify-content-end">
             <li>
-              <%= link_to customer_page_customers_path(current_customer),class: 'nav-link text-dark btn btn-light' do %>
+              <%= link_to customer_path(current_customer),class: 'nav-link text-dark btn btn-light' do %>
                 マイページ
               <% end %>
             </li>
