--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
       <%= render 'layouts/header' %>
     <% end %>
 
+    <p id="notice"><%= notice %></p>
+
     <%= yield %>
 
     <%= render 'layouts/footer' %>
