--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,2 +1,24 @@
-<h1>Public::Customers#edit</h1>
-<p>Find me in app/views/public/customers/edit.html.erb</p>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-2'></div>
+    <div class='col-md-7'>
+      <%= form_with model:@customer,local:true do |f| %>
+        <h4>プロフィール画像</h4>
+        <%= f.file_field :profile_image, accept: "image/*" %>
+
+        <h4>会員名</h4>
+        <%= f.text_field :name %>
+
+        <h4>紹介文</h4>
+        <%= f.text_area :introduction %>
+
+        <h4>会員ステータス</h4>
+
+        <div class="form-group">
+          <%= f.submit class: 'btn btn-success' %>
+        </div>
+      <% end %>
+    </div>
+    <div class='col-md-3'></div>
+  </div>
+</div>
