--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -1,30 +1,28 @@
-<%= form_with model:@post,local:true do |f| %>
-
-  <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control book_title' %>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-2'></div>
+    <div class='col-md-7'>
+      <%= form_with model:@post,local:true do |f| %>
+        <h4>画像</h4>
+        <%= f.file_field :image, accept: "image/*" %>
+  
+        <h4>タイトル</h4>
+        <%= f.text_field :title %>
+  
+        <h4>紹介文</h4>
+        <%= f.text_area :introduction %>
+  
+        <h4>アピールポイント</h4>
+        <%= f.text_area :selling_point %>
+  
+        <h4>詳細文</h4>
+        <%= f.text_area :detail %>
+  
+        <div class="form-group">
+          <%= f.submit class: 'btn btn-success' %>
+        </div>
+      <% end %>
+    </div>
+    <div class='col-md-3'></div>
   </div>
-  <div class="form-group">
-    <%= f.label :opinion %>
-    <%= f.text_area :introduction, class: 'form-control book_body' %>
-  </div>
-
-  <h4>画像</h4>
-  <%= f.file_field :image, accept: "image/*" %>
-
-  <h4>タイトル</h4>
-  <%= f.text_field :title %>
-
-  <h4>紹介文</h4>
-  <%= f.text_area :introduction %>
-
-  <h4>アピールポイント</h4>
-  <%= f.text_area :selling_point %>
-
-  <h4>詳細文</h4>
-  <%= f.text_area :detail %>
-
-  <div class="form-group">
-    <%= f.submit class: 'btn btn-success' %>
-  </div>
-<% end %>
+</div>
