--- a/app/views/public/customers/_info.html.erb
+++ b/app/views/public/customers/_info.html.erb
@@ -1,7 +1,11 @@
 <div class="container">
   <div class='row'>
     <div class='col'>
-      <h3 class='pull-left m-3'><strong>マイページ</strong></h3>
+      <% if customer == current_customer %>
+        <h3 class='pull-left m-3'><strong>マイページ</strong></h3>
+      <% else %>
+        <h3 class='pull-left m-3'><strong><%= customer.name %>さんのページ</strong></h3>
+      <% end %>
       <div class="col d-flex allgin-items-center p-2">
         <h4 class="mt-2"><strong>登録情報</strong></h4>
         <% if customer == current_customer %>
@@ -23,13 +27,26 @@
       	  <td><%= customer.introduction %></td>
         </tr>
       </table>
+      <!--投稿、フォローのみ他ユーザも閲覧可能とする-->
       <div class="col d-flex aligin-items-center">
-        <h4 class="mt-1">配送先</h4>
+        <h4 class="mt-1">投稿</h4>
         <%= link_to "一覧を見る", class:"btn btn-info ml-5 mb-3 " %>
       </div>
+      <% if customer == current_customer %>
+        <div class="col d-flex aligin-items-center">
+          <h4 class="mt-1">いいね</h4>
+          <%= link_to "一覧を見る", class:"btn btn-info ml-5 mb-3 " %>
+        </div>
+      <% end %>
+      <% if customer == current_customer %>
+        <div class="col d-flex aligin-items-center">
+          <h4 class="mt-1">コメント</h4>
+          <%= link_to "一覧を見る", class:"btn btn-info ml-5 mb-3 " %>
+        </div>
+      <% end %>
       <div class="col d-flex aligin-items-center">
-        <h4>注文履歴</h4>
-        <%= link_to "一覧を見る", class:"btn btn-info ml-4 mb-3" %>
+        <h4 class="mt-1">フォロー</h4>
+        <%= link_to "一覧を見る", class:"btn btn-info ml-5 mb-3 " %>
       </div>
     </div>
   </div>
