[Update]会員ページに会員の投稿一覧を追加

--- a/app/views/public/customers/_info.html.erb
+++ b/app/views/public/customers/_info.html.erb
@@ -30,7 +30,7 @@
       <!--投稿、フォローのみ他ユーザも閲覧可能とする-->
       <div class="col d-flex aligin-items-center">
         <h4 class="mt-1">投稿</h4>
-        <%= link_to "一覧を見る", class:"btn btn-info ml-5 mb-3 " %>
+        <%= link_to "一覧を見る", customer_posts_path(customer), class:"btn btn-info ml-5 mb-3 " %>
       </div>
       <% if customer == current_customer %>
         <div class="col d-flex aligin-items-center">
