[Update]コメント機能の追加

--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -27,6 +27,7 @@
             <td><%= post.introduction %></td>
             <td><%= post.selling_point %></td>
             <td><%= post.detail %></td>
+            <td><%= link_to "#{post.comments.count} コメント", post_path(post) %></td>
           </tr>
         <% end %>
       </tbody>
