--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -40,4 +40,24 @@
       </div>
     <% end %>
   </div>
+
+
+  <div class="row">
+    <div>
+      <p>コメント件数：<%= @post.comments.count %></p>
+      <% @post.comments.each do |comment| %>
+        <p><%= image_tag comment.customer.get_profile_image(100,100) %></p>
+        <%= comment.customer.name %>
+        <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.body %>
+      <% end %>
+    </div>
+    <div>
+      <%= form_with model: [@post, @comment] do |f| %>
+        <%= f.text_area :body, rows: '5', placeholder: "コメントをここに" %>
+        <%= f.submit "送信する" %>
+      <% end %>
+    </div>
+  </div>
+
 </div>
+
