--- a/app/views/public/customers/_info.html.erb
+++ b/app/views/public/customers/_info.html.erb
@@ -41,7 +41,7 @@
       <% if customer == current_customer %>
         <div class="col d-flex aligin-items-center">
           <h4 class="mt-1">コメント</h4>
-          <%= link_to "一覧を見る", class:"btn btn-info ml-5 mb-3 " %>
+          <%= link_to "一覧を見る", customer_comments_path(customer), class:"btn btn-info ml-5 mb-3 " %>
         </div>
       <% end %>
       <div class="col d-flex aligin-items-center">
