--- a/app/views/public/customers/_customer_info.html.erb
+++ b/app/views/public/customers/_customer_info.html.erb
@@ -35,7 +35,7 @@
       <% if customer == current_customer %>
         <div class="col d-flex aligin-items-center">
           <h4 class="mt-1">いいね</h4>
-          <%= link_to "一覧を見る", class:"btn btn-info ml-5 mb-3 " %>
+          <%= link_to "一覧を見る", customer_favorites_path(customer), class:"btn btn-info ml-5 mb-3 " %>
         </div>
       <% end %>
       <% if customer == current_customer %>
