--- a/app/views/public/customers/customer_comments.html.erb
+++ b/app/views/public/customers/customer_comments.html.erb
@@ -1,3 +1,3 @@
-<h1>customerコメント一覧</h1>
+<h1><%= @customer.name %>さんのコメント一覧</h1>
 
-<%= render 'index',comments: @customer_comments %>
+<%= render 'comment_index', comments: @customer_comments %>
