--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -1,7 +1,7 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container">
-      <a class="navbar-brand text-dark btn btn-light" href="/"><span>idea_vote</span></a>
+      <a class="navbar-brand text-dark btn btn-light" href="/"><span>idea_vote_Admin</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -25,8 +25,8 @@
             </li>
             <li class="p-2"></li>
             <li>
-              <%=  link_to new_post_path ,class: 'nav-link text-dark btn btn-light' do %>
-                新規投稿
+              <%=  link_to admin_genres_path ,class: 'nav-link text-dark btn btn-light' do %>
+                ジャンル一覧
               <% end %>
             </li>
             <li class="p-2"></li>
