--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -4,6 +4,7 @@
     <table class="table table-striped">
       <thead>
         <tr>
+          <th>ジャンル</th>
           <th>タイトル</th>
           <th>紹介文</th>
           <th>アピールポイント</th>
@@ -14,6 +15,7 @@
       <tbody>
         <% posts.each do |post| %>
           <tr>
+            <td><%= post.genre.genre_name %></td>
             <td>
               <%= link_to post_path(post.id) do %>
                 <% if post.image.attached? %>
