--- a/app/views/layouts/_public_header.html.erb
+++ b/app/views/layouts/_public_header.html.erb
@@ -23,6 +23,13 @@
                 投稿一覧
               <% end %>
             </li>
+            
+            <li class="p-2"></li>
+            <li>
+              <%=  link_to genres_path ,class: 'nav-link text-dark btn btn-light' do %>
+                ジャンル一覧
+              <% end %>
+            </li>
             <li class="p-2"></li>
             <li>
               <%=  link_to new_post_path ,class: 'nav-link text-dark btn btn-light' do %>
