[Fix]adminの投稿一覧・詳細の修正

--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -19,7 +19,7 @@
             </li>
             <li class="p-2"></li>
             <li>
-              <%=  link_to posts_path,class: 'nav-link text-dark btn btn-light' do %>
+              <%=  link_to admin_posts_path,class: 'nav-link text-dark btn btn-light' do %>
                 投稿一覧
               <% end %>
             </li>
