[Update]publicの検索機能を追加

--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -36,8 +36,8 @@
               <% end %>
             </li>
             </div>
-            <div class="">
-              <!--検索機能があった場所-->
+            <div class="d-flex justify-content-end">
+              <li><%= render 'public/searches/search', class:'nav-link' %></li>
             </div>
           </div>
         </ul>
