--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,9 @@
                 <% end %>
               </li>
             </div>
-              <!--検索機能があった場所-->
+            <div class="d-flex justify-content-end">
+              <li><%= render 'public/searches/search', class:'nav-link' %></li>
+            </div>
           </div>
         </ul>
       </div>
