--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -37,7 +37,7 @@
             </li>
             </div>
             <div class="d-flex justify-content-end">
-              <li><%= render 'public/searches/search', class:'nav-link' %></li>
+              <li><%= render 'admin/searches/search', class:'nav-link' %></li>
             </div>
           </div>
         </ul>
