[Update]adminの会員一覧・詳細画面追加

--- a/app/views/admin/customers/_customer_index.html.erb
+++ b/app/views/admin/customers/_customer_index.html.erb
@@ -17,7 +17,7 @@
           <tr>
             <td><%= image_tag customer.get_profile_image(100,100) %></td>
             <td>
-              <%= link_to customer_path(customer.id) do %>
+              <%= link_to admin_customer_path(customer.id) do %>
                 <%= customer.name %>
               <% end %>
             </td>
