--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -53,9 +53,10 @@
         <p><%= image_tag comment.customer.get_profile_image(100,100) %></p>
         <%= comment.customer.name %>
         <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.body %>
-        <!--ログインユーザがコメントしたユーザと同一の場合、削除ボタンを表示-->
-        <% if comment.customer == current_customer %>
-          <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete %>
+        <% if comment.is_deleted == false %>
+          <%= render 'admin/comments/comment_hide_button', comment: comment %>
+        <% else %>
+          <%= render 'admin/comments/comment_display_button', comment: comment %>
         <% end %>
       <% end %>
     </div>
