--- a/app/views/admin/genres/show.html.erb
+++ b/app/views/admin/genres/show.html.erb
@@ -33,7 +33,7 @@
   <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-1 mx-auto text-left">
-      <%= link_to post_path(post.id) do %>
+      <%= link_to admin_post_path(post.id) do %>
         <% if post.image.attached? %>
           <%= image_tag post.image, size: "100x100" %>
         <% else %>
