--- a/app/views/admin/posts/_index.html.erb
+++ b/app/views/admin/posts/_index.html.erb
@@ -4,7 +4,7 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th>ジャンル</th>
+          <th>ジャンルa</th>
           <th>タイトル</th>
           <th>紹介文</th>
           <th>アピールポイント</th>
