--- a/app/views/admin/customers/_favorite_index.html.erb
+++ b/app/views/admin/customers/_favorite_index.html.erb
@@ -19,7 +19,7 @@
             <td>
               <%= link_to admin_post_path(favorite.post.id) do %>
                 <% if favorite.post.image.attached? %>
-                  <%= image_tag post.image, size: "100x100" %>
+                  <%= image_tag favorite.post.image, size: "100x100" %>
                 <% else %>
                   <%= image_tag 'default-image', size: "100x100" %>
                 <% end %>
