--- a/app/views/public/drafts/edit.html.erb
+++ b/app/views/public/drafts/edit.html.erb
@@ -1,2 +1,25 @@
-<h1>Public::Drafts#edit</h1>
-<p>Find me in app/views/public/drafts/edit.html.erb</p>
+<h1>下書き編集・投稿</h1>
+<%= form_with model: @post, url: '/posts', method: :post do |f| %>
+
+  <h4><%= f.collection_select :genre_id, @genres, :id, :genre_name, prompt: "-- 選択してください --", required: true, class: "w-50" %></h4>
+
+  <h4>画像</h4>
+  <%= f.file_field :image, accept: "image/*" %>
+
+  <h4>タイトル</h4>
+  <%= f.text_field :title %>
+
+  <h4>紹介文</h4>
+  <%= f.text_area :introduction %>
+
+  <h4>アピールポイント</h4>
+  <%= f.text_area :selling_point %>
+
+  <h4>詳細文</h4>
+  <%= f.text_area :detail %>
+
+  <div class="form-group">
+    <%= f.select :status, Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"),k]}, {}, {class: "custom-select w-25"} %>
+  </div>
+  <%= f.submit '投稿する', class: "btn btn-success" %>
+<% end %>
