--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -18,6 +18,9 @@
   <h4>詳細文</h4>
   <%= f.text_area :detail %>
 
-  <%= f.submit '投稿' %>
+  <div class="form-group">
+    <%= f.select :status, Post.statuses.keys.map { |k| [t("enums.post.status.#{k}"),k]}, {}, {class: "custom-select w-25"} %>
+  </div>
+  <%= f.submit '投稿する', class: "btn btn-success" %>
 <% end %>
 
