[Fix]adminのコメント削除・取消ボタンを非表示・表示ボタンに修正

--- a/app/views/admin/comments/_comment_hide_button.html.erb
+++ b/app/views/admin/comments/_comment_hide_button.html.erb
@@ -1,4 +1,4 @@
 
 <button type="button" class="btn btn-outline-danger">
-  <%= link_to "削除", admin_post_comment_hide_path(comment.post, comment), method: :patch %>
+  <%= link_to "非表示", admin_post_comment_hide_path(comment.post, comment), method: :patch %>
 </button>
