--- a/app/views/admin/comments/_comment_display_button.html.erb
+++ b/app/views/admin/comments/_comment_display_button.html.erb
@@ -1,4 +1,4 @@
 
 <button type="button" class="btn btn-outline-primary">
-  <%= link_to "削除取消", admin_post_comment_display_path(comment.post, comment), method: :patch %>
+  <%= link_to "非表示取消", admin_post_comment_display_path(comment.post, comment), method: :patch %>
 </button>
