--- a/app/views/admin/customers/_customer_info.html.erb
+++ b/app/views/admin/customers/_customer_info.html.erb
@@ -26,6 +26,20 @@
       	  <th class="table-secondary">紹介文</th>
       	  <td><%= customer.introduction %></td>
         </tr>
+        <tr>
+      	  <th class="table-secondary">会員ステータス</th>
+      	  <td>
+            <% if customer.is_deleted == false %>
+              <div class="text-success">
+                <strong><%= '登録中' %></strong>
+              </div>
+            <% else %>
+              <div class="text-secondary">
+                <strong><%= '退会済み' %></strong>
+              </div>
+            <% end %>
+          </td>
+        </tr>
       </table>
       <div class="col d-flex aligin-items-center">
         <h4 class="mt-1">投稿</h4>
