--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,11 +1,19 @@
 <div class='container'>
   <div class='row'>
-    <div class='col-md-2'></div>
+    <div class='col-md-2'>
       <% if @post.image.attached? %>
         <%= image_tag @post.image, size: "100x100" %>
       <% else %>
         <%= image_tag 'default-image', size: "100x100" %>
       <% end %>
+      <td>
+        <% if @post.is_deleted == false %>
+          <%= render 'post_hide_button', post: @post %>
+        <% else %>
+          <%= render 'post_display_button', post: @post %>
+        <% end %>
+      </td>
+    </div>
     <div class='col-md-7'>
       <h2><strong>ジャンル</strong></h2>
       <h5><%= @post.genre.genre_name %></h5>
