--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -6,6 +6,7 @@
       <% else %>
         <%= image_tag 'default-image', size: "100x100" %>
       <% end %>
+    </div>
     <div class='col-md-7'>
       <h2><strong>ジャンル</strong></h2>
       <h5><%= @post.genre.genre_name %></h5>
