--- a/app/views/public/customers/_customer_info.html.erb
+++ b/app/views/public/customers/_customer_info.html.erb
@@ -54,6 +54,12 @@
           <%= link_to "一覧を見る", customer_drafts_path(customer), class:"btn btn-info ml-5 mb-3 " %>
         </div>
       <% end %>
+      <% if customer == current_customer %>
+        <div class="col d-flex aligin-items-center">
+          <h4 class="mt-1">退会する</h4>
+          <%= link_to "退会ページへ", confirm_customer_path(customer), class:"btn btn-secondary ml-5 mb-3 " %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
