--- a/app/views/admin/customers/_customer_info.html.erb
+++ b/app/views/admin/customers/_customer_info.html.erb
@@ -54,8 +54,12 @@
         <%= link_to "一覧を見る", admin_customer_comments_path(customer), class:"btn btn-info ml-5 mb-3 " %>
       </div>
       <div class="col d-flex aligin-items-center">
-        <h4 class="mt-1">フォロー</h4>
-        <%= link_to "一覧を見る", class:"btn btn-info ml-5 mb-3 " %>
+        <h4 class="mt-1"></h4>
+        <% if customer.is_deleted == false %>
+          <%= link_to "退会させる", unsubscribe_admin_customer_path(customer), method: :patch, class:"btn btn-secondary ml-5 mb-3 " %>
+        <% else %>
+          <%= link_to "復帰させる", subscribe_admin_customer_path(customer), method: :patch, class:"btn btn-success ml-5 mb-3 " %>
+        <% end %>
       </div>
     </div>
   </div>
