--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,12 @@
               </li>
               <li class="p-2"></li>
               <li>
+                <%=  link_to genres_path ,class: 'nav-link text-dark btn btn-light' do %>
+                  ジャンル一覧
+                <% end %>
+              </li>
+              <li class="p-2"></li>
+              <li>
                 <%= link_to new_customer_registration_path,class: 'nav-link text-dark btn btn-light' do %>
                   新規登録
                 <% end %>
