--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -60,7 +60,7 @@
       <div>
         <!--削除済みのコメントを表示・カウントしない-->
         <% comments = Comment.where(post_id: params[:id]).where(is_deleted: false) %>
-        <p>コメント件数：<%= comments.count %></p>
+          <p>コメント件数：<%= comments.count %></p>
         <% comments.each do |comment| %>
           <p><%= image_tag comment.customer.get_profile_image(100,100) %></p>
           <%= comment.customer.name %>
@@ -71,10 +71,13 @@
           <% end %>
         <% end %>
       </div>
-      <div>
-        <%= form_with model: [@post, @comment] do |f| %>
-          <%= f.text_area :body, rows: '5', placeholder: "コメントをここに" %>
-          <%= f.submit "送信する" %>
+      <!--非ログイン時はコメント不可-->
+      <% if current_customer.present? %>
+        <div>
+          <%= form_with model: [@post, @comment] do |f| %>
+            <%= f.text_area :body, rows: '5', placeholder: "コメントをここに" %>
+            <%= f.submit "送信する" %>
+          <% end %>
         <% end %>
       </div>
     </div>
