--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -24,7 +24,11 @@
       <p><%=  @post.detail %></p>
 
       <h2><strong>ユーザーネーム</strong></h2>
-      <p><%=  @post.customer.name %></p>
+      <p>
+        <%= link_to customer_path(@customer) do %>
+          <%=  @post.customer.name %>
+        <% end %>
+      </p>
 
       <h2><strong>投稿日</strong></h2>
       <p><%=  @post.created_at %></p>
