--- a/app/views/public/relationships/_followings_count.html.erb
+++ b/app/views/public/relationships/_followings_count.html.erb
@@ -1,4 +1,5 @@
 
 <%= link_to customer_followings_path(customer) do %>
-  <%= customer.followings.count %>
+  <%#= customer.followings.count %>
+  <%= followings.count %>
 <% end %>
