--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -8,6 +8,12 @@
       <% end %>
     </div>
     <div class='col-md-7'>
+        <% @post.tags.each do |tag| %>
+          <button type="button" class="btn btn-primary">
+            <span><%= tag.name %></span>
+          </button>
+        <% end %>
+      
       <h2><strong>ジャンル</strong></h2>
       <h5><%= @post.genre.genre_name %></h5>
 
