[Update]publicのタグ検索の実装

--- a/app/views/layouts/_public_header.html.erb
+++ b/app/views/layouts/_public_header.html.erb
@@ -31,6 +31,12 @@
               </li>
               <li class="p-2"></li>
               <li>
+                <%=  link_to tags_path ,class: 'nav-link text-dark btn btn-light' do %>
+                  タグ一覧
+                <% end %>
+              </li>
+              <li class="p-2"></li>
+              <li>
                 <%=  link_to new_post_path ,class: 'nav-link text-dark btn btn-light' do %>
                   新規投稿
                 <% end %>
