--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -31,6 +31,12 @@
             </li>
             <li class="p-2"></li>
             <li>
+              <%=  link_to admin_tags_path ,class: 'nav-link text-dark btn btn-light' do %>
+                タグ一覧
+              <% end %>
+            </li>
+            <li class="p-2"></li>
+            <li>
               <%= link_to destroy_customer_session_path, method: :delete,class: 'nav-link text-dark btn btn-light' do %>
                 ログアウト
               <% end %>
