--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -3,9 +3,7 @@
   <div class="row">
     <table class="table table-striped">
       <div>
-        <%= link_to '新着順', posts_path({target:"date", sort:"desc"}) %>
-        <%= link_to 'いいね数順', posts_path({target:"favorite", sort:"asc"}) %>
-        <%= link_to 'コメント数順', posts_path({target:'comment', sort:'asc'}) %>
+        <%= render 'sort' %>
       </div>
       <thead>
         <tr>
