--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,7 @@
 <h1>Public::Homes#top</h1>
 <p>Find me in app/views/public/homes/top.html.erb</p>
 
-
+<% if current_customer.nil? %>
   <div class="btn-wrapper col-10 mx-auto">
     <div class="row">
       <%= link_to 'ゲストログイン（閲覧用）', customers_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3 sign_in", method: :post %>
@@ -13,3 +13,4 @@
       <%= link_to 'Sign Up',new_customer_registration_path, class: "btn btn-success btn-sm btn-block sign_up" %>
     </div>
   </div>
+<% end %>
