--- a/app/views/public/genres/index.html.erb
+++ b/app/views/public/genres/index.html.erb
@@ -1,11 +1,9 @@
-<div class="container mx-5">
+<div class="container pb-50">
   <div class="row">
     <div class="col">
-      <h4 class="mt-4 ml-5">ジャンル一覧</h4>
+      <h4>ジャンル一覧</h4>
     </div>
   </div>
 
-  <div class="col-5 mt-5">
-    <%= render 'index', genres: @genres %>
-  </div>
+  <%= render 'index', genres: @genres %>
 </div>
