[Update]デプロイ用調整

--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div>
-      <%= render 'sort' %>
+      <%= render 'public/posts/sort' %>
     </div>
   </div>
   
