--- a/app/views/admin/customers/_customer_info.html.erb
+++ b/app/views/admin/customers/_customer_info.html.erb
@@ -54,7 +54,7 @@
         <%= link_to "一覧を見る", admin_customer_comments_path(customer), class:"btn btn-info ml-5 mb-3 " %>
       </div>
       <div class="col d-flex aligin-items-center">
-        <h4 class="mt-1"></h4>
+        <h4 class="mt-1">退会</h4>
         <% if customer.is_deleted == false %>
           <%= link_to "退会させる", unsubscribe_admin_customer_path(customer), method: :patch, class:"btn btn-secondary ml-5 mb-3 " %>
         <% else %>
