--- a/app/views/admin/genres/_show.html.erb
+++ b/app/views/admin/genres/_show.html.erb
@@ -1,7 +1,16 @@
+
 <div class="container">
+  <div class="m-md-1"><br>
+  <div class="row">
+    <h4 class="col-md-3 mx-auto text-center" style="background-color:#DDD">
+      <strong><%= genre.genre_name %>一覧</strong>
+    </h4>
+    <div class="col-md-9 mx-auto text-right"></div>
+  </div>
+  
   <div class="row">
     <div>
-      <%= render 'admin/posts/sort' %>
+      <%= render 'sort', genre: genre %>
     </div>
   </div>
   
@@ -9,7 +18,6 @@
     <% posts.each do |post| %>
       <div class="col-md-3">
         <div class="card">
-          <%= post.genre.genre_name %>
           <%= link_to admin_post_path(post.id) do %>
             <% if post.image.attached? %>
               <%= image_tag post.image, size: "100x100" %>
@@ -17,7 +25,7 @@
               <%= image_tag 'default-image', size: "100x100" %>
             <% end %>
           <% end %>
-          <%= link_to post_path(post.id) do %>
+          <%= link_to admin_post_path(post.id) do %>
             <%= post.title %>
           <% end %>
           <%= post.introduction %>
@@ -25,14 +33,18 @@
           <%= post.detail %>
               
           <%= render 'public/favorites/favorite_count', post: post %>
+          
           <!--削除済みのコメントをカウントしない-->
           <% comments = Comment.where(post_id: post.id).where(is_deleted: false) %>
             <%= link_to "#{comments.count} コメント", admin_post_path(post) %>
-          <% if post.is_deleted == false %>
-            <%= render 'admin/posts/post_hide_button', post: post %>
-          <% else %>
-            <%= render 'admin/posts/post_display_button', post: post %>
-          <% end %>
+          
+          <div>
+            <% if post.is_deleted == false %>
+              <%= render 'admin/posts/post_hide_button', post: post %>
+            <% else %>
+              <%= render 'admin/posts/post_display_button', post: post %>
+            <% end %>
+          </div>
         </div>
       </div>
     <% end %>
