--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,14 +1,14 @@
-<div class="container mx-5">
+<div class="container pb-50">
   <div class="row">
     <div class="col">
-      <h4 class="mt-4 ml-5">ジャンル一覧・追加</h4>
-      <div class="mt-5 ml-3">
-        <%= render 'form', genre: @genre_new %>
-      </div>
+      <h4>ジャンル一覧・追加</h4>
+      <%= render 'form', genre: @genre_new %>
     </div>
   </div>
 
-  <div class="col-5 mt-5">
-    <%= render 'index', genres: @genres %>
+  <div class="row">
+    <div class="col">
+      <%= render 'index', genres: @genres %>
+    </div>
   </div>
 </div>
