--- a/app/views/admin/genres/show.html.erb
+++ b/app/views/admin/genres/show.html.erb
@@ -1,84 +1,1 @@
-<div class="container">
-  <div class="m-md-2"><br>
-  <div class="row">
-    <h4 class="col-md-2 mx-auto text-center" style="background-color:#DDD">
-      <strong><%= @genre.genre_name %>一覧</strong>
-    </h4>
-    <div class="col-md-5 mx-auto text-right"></div>
-  </div>
-
-  <diV class="m-md-2"><br></diV>
-
-  <div class="row">
-    <div class="col-md-2 mx-auto text-left">
-      <strong>投稿タイトル</strong>
-    </div>
-    <div class="col-md-2 mx-auto text-left">
-      <strong>紹介文</strong>
-    </div>
-    <div class="col-md-2 mx-auto text-left">
-      <strong>アピールポイント</strong>
-    </div>
-    <div class="col-md-2 mx-auto text-left">
-      <strong>詳細文</strong>
-    </div>
-    <div class="col-md-1 mx-auto text-left">
-      <strong>いいね数</strong>
-    </div>
-    <div class="col-md-1 mx-auto text-left">
-      <strong>コメント数</strong>
-    </div>
-    <div class="col-md-1 mx-auto text-left">
-      <strong>表示ステータス</strong>
-    </div>
-    <div class="col-md-1"></div>
-  </div>
-
-  <% @posts.each do |post| %>
-  <div class="row">
-    <div class="col-md-2 mx-auto text-left">
-      <%= link_to admin_post_path(post.id) do %>
-        <% if post.image.attached? %>
-          <%= image_tag post.image, size: "100x100" %>
-        <% else %>
-          <%= image_tag 'default-image', size: "100x100" %>
-        <% end %>
-        <%= post.title %>
-      <% end %>
-    </div>
-    <div class="col-md-2 mx-auto text-left"><%= post.introduction %>
-      <div class="col-md-1"><br></div>
-    </div>
-    <div class="col-md-2 mx-auto text-left"><%= post.selling_point %>
-      <div class="col-md-1"><br></div>
-    </div>
-    <div class="col-md-2 mx-auto text-left"><%= post.detail %>
-      <div class="col-md-1"><br></div>
-    </div>
-    <div class="col-md-1 mx-auto text-left"><%= render 'public/favorites/favorite_count', post: post %>
-      <div class="col-md-1"><br></div>
-    </div>
-    <div class="col-md-1 mx-auto text-left"><%= "#{post.comments.count} コメント" %>
-      <div class="col-md-1"><br></div>
-    </div>
-    <% if post.is_deleted == false %>
-      <div class="col-md-1 mx-auto text-left text-success">
-        <strong><%= '表示' %></strong>
-      </div>
-    <% else %>
-      <div class="col-md-1 mx-auto text-left text-secondary">
-        <strong><%= '非表示' %></strong>
-      </div>
-    <% end %>
-    <div class="col-md-1">
-      <% if post.is_deleted == false %>
-        <%= render 'admin/posts/post_hide_button', post: post %>
-      <% else %>
-        <%= render 'admin/posts/post_display_button', post: post %>
-      <% end %>
-    </div>
-  </div>
-  <br>
-  <% end %>
-
-</div>
+<%= render 'show',posts: @posts, genre: @genre %>
